Czcionka, newOperation Layout made

--- a/app/src/main/res/layout/new_operation.xml
+++ b/app/src/main/res/layout/new_operation.xml
@@ -1,52 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Nowa operacja"
+            android:id="@+id/newOperationLabel"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Nowa operacja"
-        android:id="@+id/newOperationLabel"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/textView8" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="278dp"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:textSize="30sp"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:text="Kwota"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/textView8"
+            android:layout_below="@id/newOperationLabel"
+            android:layout_toStartOf="@+id/textView8" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:textSize="30sp"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:text="Kwota"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/textView8"
-        android:layout_toStartOf="@+id/textView8" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/PLN"
-        android:id="@+id/textView8"
-        android:textSize="40sp"
-        android:singleLine="true"
-        android:gravity="bottom"
-        android:layout_alignBottom="@+id/editText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/button2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/editText2"
-        android:id="@+id/relativeLayout">
+        <TextView
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/PLN"
+            android:id="@+id/textView8"
+            android:textSize="40sp"
+            android:singleLine="true"
+            android:gravity="bottom"
+            android:layout_alignBottom="@+id/editText"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </LinearLayout>
 
         <EditText
             android:layout_width="wrap_content"
@@ -55,25 +53,18 @@
             android:text="Tytuł(opcjonalnie)"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp" />
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal" />
 
         <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:id="@+id/spinner"
-            android:layout_weight="1"
             android:layout_below="@+id/editText2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <DatePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/datePicker"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/spinner" />
-
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:gravity="center"
             android:layout_height="wrap_content"
@@ -82,14 +73,14 @@
             android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/datePicker"
             android:layout_alignStart="@+id/datePicker">
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wpływ"
-            android:id="@+id/radioButton"
-            android:layout_below="@+id/datePicker3"
-            android:layout_alignLeft="@+id/datePicker3"
-            android:layout_alignStart="@+id/datePicker3" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wpływ"
+                android:id="@+id/radioButton"
+                android:layout_below="@+id/datePicker3"
+                android:layout_alignLeft="@+id/datePicker3"
+                android:layout_alignStart="@+id/datePicker3" />
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -98,14 +89,32 @@
 
         </RadioGroup>
 
-    </RelativeLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        android:gravity="center"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Wybierz datę:"
+            android:id="@+id/textView7" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="data"
+            android:id="@+id/dataPickerBtn" />
+    </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dodaj operację"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dodaj operację"
+            android:id="@+id/button2"
+            android:layout_gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+    </LinearLayout>
