--- a/app/src/main/res/layout/new_operation.xml
+++ b/app/src/main/res/layout/new_operation.xml
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="data"
-            android:id="@+id/dataPickerBtn" />
+            android:id="@+id/datePickerBtn" />
     </LinearLayout>
 
     <Button
