--- a/app/src/main/res/layout/new_operation.xml
+++ b/app/src/main/res/layout/new_operation.xml
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="data"
-            android:onClick="chooseDateClicked"
+            android:onClick="showDatePickerDialog"
             android:id="@+id/datePickerBtn"
             />
     </LinearLayout>
