zrobione kategorie, ze mozna wracac o gory rowniez :)

--- a/app/src/main/res/layout/new_operation.xml
+++ b/app/src/main/res/layout/new_operation.xml
@@ -38,7 +38,8 @@
     </LinearLayout>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:singleLine="true"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tytulNowejOperacji"
             android:hint="Tytuł(opcjonalnie)"
