--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,7 +18,7 @@
             android:icon="@drawable/ic_category_24dp"
             android:title="Kategorie" />
         <item
-            android:id="@+id/nav_zlecenie"
+            android:id="@+id/nav_standing_operations"
             android:icon="@drawable/ic_order_24dp"
             android:title="Zlecenia stałe" />
         <item
