--- a/app/src/main/res/layout/new_standing_operation.xml
+++ b/app/src/main/res/layout/new_standing_operation.xml
@@ -109,6 +109,14 @@
         android:id="@+id/startDatePickerBtn"
         />
 </LinearLayout>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data zakończenia"
+        android:id="@+id/checkBox"
+        android:layout_gravity="center_horizontal" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -128,6 +136,7 @@
             android:onClick="showDatePickerDialog"
             android:id="@+id/endDatePickerBtn"
             />
+
     </LinearLayout>
 
     <SeekBar
