New Wallet, dialog box w MenuActivity

--- a/app/src/main/res/layout/new_wallet.xml
+++ b/app/src/main/res/layout/new_wallet.xml
@@ -20,13 +20,15 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:entries="@array/examples"
         android:id="@+id/currency_spinner"
         android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/dodaj_portfel"
         android:id="@+id/addWallet"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:gravity="center|center_vertical" />
 </LinearLayout>
