--- a/app/src/main/res/layout/operation_row.xml
+++ b/app/src/main/res/layout/operation_row.xml
@@ -47,7 +47,8 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/operationCost" />
+            android:id="@+id/operationCost"
+            android:layout_weight="0.30" />
     </LinearLayout>
 
 
