--- a/app/src/main/res/layout/new_category.xml
+++ b/app/src/main/res/layout/new_category.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:minWidth="250dp"
     android:layout_height="match_parent">
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newCategoryName"
+        android:hint="@string/nazwa_kategorii"
         android:layout_gravity="center_horizontal" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/parentCategory"
+        android:entries="@array/examples"
         android:layout_gravity="center_horizontal" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/iconForCategory"
+        android:entries="@array/examples"
         android:layout_gravity="center_horizontal" />
 
     <Button
