--- a/app/src/main/res/layout/operation_row.xml
+++ b/app/src/main/res/layout/operation_row.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/operationCost"
+            android:gravity="right"
             android:layout_weight="0.30" />
     </LinearLayout>
 
