--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -8,9 +8,10 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/categoryHeadIcon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_gravity="left"
+            android:tint="#ffffff"
             android:src="@drawable/ic_reply_24dp" />
 
         <TextView
