--- a/app/src/main/res/layout/categories_row.xml
+++ b/app/src/main/res/layout/categories_row.xml
@@ -3,15 +3,17 @@
     android:layout_height="?android:attr/listPreferredItemHeight">
 
     <RelativeLayout
+        android:layout_margin="@dimen/fab_margin"
         android:id="@+id/categoryRowLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_margin">
         <ImageView
             android:id="@+id/categoryIcon"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="left"
+            android:tint="#ffffff"
             android:src="@drawable/ic_menu_send" />
 
         <TextView
@@ -19,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
-            android:textSize="22sp"
+            android:textSize="16sp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/fab_margin"
             android:layout_toRightOf="@+id/categoryIcon" />
