--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#1b8d2e</color>
     <color name="negativeValue">#EC644B</color>
     <color name="shamrock">#2ECC71</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
