--- a/app/src/main/res/layout/new_wallet.xml
+++ b/app/src/main/res/layout/new_wallet.xml
@@ -21,7 +21,7 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/examples"
+        android:entries="@array/currencies"
         android:id="@+id/currency_spinner"
         android:layout_gravity="center_horizontal" />
 
