--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,26 +4,24 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_margin="0dp"
     android:layout_height="match_parent">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1">
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Od:"
             android:id="@+id/textView12"
             android:gravity="center"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignBottom="@+id/button3"
-            android:layout_toStartOf="@+id/button3"
-            android:layout_toLeftOf="@+id/button3"
             android:paddingLeft="10dp" />
 
         <Button
@@ -32,11 +30,7 @@
             android:text="data"
             android:id="@+id/dateFromButton"
             android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="95dp"
-            android:layout_weight="0.40
-            "
-            android:paddingLeft="10dp" />
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,7 +39,8 @@
             android:text="Do:"
             android:id="@+id/textView13"
             android:gravity="center"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="50dp"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -55,13 +50,10 @@
             android:gravity="center"
 
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:paddingLeft="10dp"
-            android:layout_weight="0.40" />
+            android:layout_marginLeft="10dp" />
 
     </LinearLayout>
-
+    </RelativeLayout>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="530dp"
