Dodano widoki szablony i nowe szablon(xml + java)

--- a/app/src/main/res/layout/new_standing_operation.xml
+++ b/app/src/main/res/layout/new_standing_operation.xml
@@ -19,7 +19,7 @@
             android:inputType="numberDecimal"
             android:textSize="30sp"
             android:ems="10"
-            android:id="@+id/kwotaNowejKategorii"
+            android:id="@+id/standingOperationCost"
             android:hint="Kwota"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/textView8"
