--- a/app/src/main/res/layout/template_row.xml
+++ b/app/src/main/res/layout/template_row.xml
@@ -1,11 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="100dp">
 
     <RelativeLayout
         android:id="@+id/templateRowLayout"
         android:layout_width="match_parent"
-        android:layout_height="76dp">
+        android:layout_height="100dp">
 
         <TextView
             android:id="@+id/templateCategoryText"
@@ -39,9 +39,10 @@
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:textSize="22sp"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/templateCost"
-            android:layout_alignEnd="@+id/templateCost" />
+            android:height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_below="@id/templateCategoryText"/>
 
     </RelativeLayout>
 
