--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="grey">#848484</color>
     <color name="colorAccent">#1b8d2e</color>
     <color name="negativeValue">#EC644B</color>
     <color name="shamrock">#2ECC71</color>
